@@ -140,7 +140,7 @@ public class CategoryManagerImpl  {
       catch (Exception e) {}
     }
 
-    //if (map != null) {
+    if (map != null) {
       synchronized (categories) {
         makeSpecialCategories();
 
@@ -150,7 +150,7 @@ public class CategoryManagerImpl  {
           categories.put(name, cat);
         } // for catNames
       }
-    //}
+    }
   }
 
   public void saveCategories() {
