@@ -8,8 +8,9 @@ FEATURE: Partial support for Read-Only data (for seeding) [TuxPaper]
 FEATURE: Added "Forced-Start" to force a torrent to start, ignoring download limits or seeding rules [TuxPaper]
 FEATURE: Auto-positioning of finished torrent based on how badly the torrent needs seeding [TuxPaper]
 FEATURE: Added SavePath, Max # Uploads, and Total Speed columns to My Torrents view [TuxPaper]
+FEATURE: Categories to group your torrents in (right click on My Torrents and select Set Category to get started) [TuxPaper]
+FEATURE: More auto-seeding options.
 
-CHANGE: Replaced "Max Active Torrents" with "Max Seeding While DLing" and "Max Seeding No DLing" [TuxPaper]
 CHANGE: Split torrents in My Torrents view into 2 lists: Downloading and Seeding (Completed) [TuxPaper]
 CHANGE: STOPPED status now means the torrent never auto-starts [TuxPaper]
 CHANGE: Moved icon from Rank column to Name column [TuxPaper]
@@ -18,6 +19,7 @@ CHANGE: Remove "Lock Start/Stop" menu option.  Stop now means no auto-starting/s
 CHANGE: Re-design of Configuration view [TuxPaper]
 
 BUGFIX: Once a torrent is complete, and you remove the data, it wil no longer start downloading again when seeding rules are on [TuxPaper]
+BUGFIX: 1st column of MyTorrents no longer has a gap if there's no icon. (Windows Only Bug) [TuxPaper]
 
 
 
